--- a/teaching.htm
+++ b/teaching.htm
@@ -37,8 +37,10 @@
 		<td width=63% valign="top"><h3><strong>Teaching</strong></h3>	
 		I have been the primary instructor for the undergraduate course <b>Political Science as a Social Science</b></p>
 <p>I am also currently a consultant at the <a href="http:\\julius.csscr.washington.edu">Center for Social Science Computation and Research</a>, 
-where I teach short training courses in software for research and statistical analysis (in particular <a href="http:\\www.r-project.org">R</a> 
-and <a href="http:\\atlasti.com">ATLAS.ti</a>).
+where I develop and teach short training courses in software for research and statistical analysis (in particular <a href="http:\\www.r-project.org">R</a> 
+and <a href="http:\\atlasti.com">ATLAS.ti</a>).  Short courses I have developed include: Introduction to R with R Studio, Data Wrangling in R, R Graphics with ggplot2, Introduction to Interactive Graphics in R, and Introduction to Qualitative Data Analysis with Atlas.ti.
+
+
 <p>&nbsp;</p>  
 		I have also worked as a teaching assistant (classroom/lab section instructor) for the following political science courses:
     <p><strong>Graduate:</strong></p>
