updated structure of content

--- a/contact.htm
+++ b/contact.htm
@@ -22,8 +22,9 @@
 
 		  <p><a href="index.htm">Home</a> - 
 		  <a href="research.htm">Research</a> - 
+		  <a href="CarolinaJohnson_CV.pdf">CV</a> - 
 		  <a href="teaching.htm">Teaching</a> - 
-		 <a href="contact.htm">Contact</a></p>      
+		 <a href="contact.htm">Contact</a></p>
 		</div>
 
 	</td>
@@ -44,8 +45,7 @@ Seattle, WA 98195-3530
 <br>
 <br>
 csjohns AT uw DOT edu
-    <br>
-206-909-9151
+
 
 		
 		  <p>&nbsp;</p>
