--- a/research.htm
+++ b/research.htm
@@ -20,8 +20,9 @@
 	<td height="23" bgcolor="#ffffff" align="center" class="menu">
 		<div id="menu">
 
-  	  <p><a href="index.htm">Home</a> - 
+		  <p><a href="index.htm">Home</a> - 
 		  <a href="research.htm">Research</a> - 
+		  <a href="CarolinaJohnson_CV.pdf">CV</a> - 
 		  <a href="teaching.htm">Teaching</a> - 
 		 <a href="contact.htm">Contact</a></p>
 		</div>
@@ -48,7 +49,18 @@
 
         <td width="3%">&nbsp;</td>
 
-		<td width=34% valign="top"><h3>Published work</h3>
+		<td width=34% valign="top">
+		<h3>Research Interests</h3>	
+      <ul>
+		  <li>Participatory governance
+      <li>Comparative democratic institutions
+      <li>Civic engagement
+      <li>Political deliberation
+      <li>Social science methodology
+      <li>Computational social science
+      </ul>
+      <p>&nbsp;</p>
+		<h3>Published work</h3>
 		  <p>"<a href="http://www.publicdeliberation.net/jpd/vol11/iss1/art2/">Variations of Institutional Design for Empowered Deliberation"</a>, with John Gastil, in <i>Journal of Public Deliberation</i>.</p>
 		  <p>"<a href="http://onlinelibrary.wiley.com/doi/10.1111/1467-9248.12128/abstract">Civic Participation and Democratic Legitimacy</a>" in <i>Political Studies</i>. Data and code available <a href = "particip_legit_code.htm">here</a>.</p>
 		  <p>&nbsp; </p> 
