--- a/teaching.htm
+++ b/teaching.htm
@@ -22,8 +22,9 @@
 
 		  <p><a href="index.htm">Home</a> - 
 		  <a href="research.htm">Research</a> - 
+		  <a href="CarolinaJohnson_CV.pdf">CV</a> - 
 		  <a href="teaching.htm">Teaching</a> - 
-		 <a href="contact.htm">Contact</a></p>      
+		 <a href="contact.htm">Contact</a></p>
 		</div>
 
 	</td>
@@ -38,7 +39,14 @@
 		I have been the primary instructor for the undergraduate course <b>Political Science as a Social Science</b></p>
 <p>I am also currently a consultant at the <a href="http:\\julius.csscr.washington.edu">Center for Social Science Computation and Research</a>, 
 where I develop and teach short training courses in software for research and statistical analysis (in particular <a href="http:\\www.r-project.org">R</a> 
-and <a href="http:\\atlasti.com">ATLAS.ti</a>).  Short courses I have developed include: Introduction to R with R Studio, Data Wrangling in R, R Graphics with ggplot2, Introduction to Interactive Graphics in R, and Introduction to Qualitative Data Analysis with Atlas.ti.
+and <a href="http:\\atlasti.com">ATLAS.ti</a>).  Short courses I have developed include: 
+<ul>
+<li>Introduction to R with R Studio</li>
+<li>Data Wrangling in R</li>
+<li>R Graphics with ggplot2</li>
+<li>Introduction to Interactive Graphics in R</li>
+<li>Introduction to Qualitative Data Analysis with Atlas.ti.</li>
+</ul></p>
 
 
 <p>&nbsp;</p>  
