adding code and fixing typo in research headings

--- a/research.htm
+++ b/research.htm
@@ -50,7 +50,7 @@
         <td width="3%">&nbsp;</td>
 
 		<td width=34% valign="top">
-		<h3>Research Interests</h3>	
+		<h3>Research Keywords</h3>	
       <ul>
 		  <li>Participatory governance
       <li>Comparative democratic institutions
