updated teaching (added csss 221)

--- a/teaching.htm
+++ b/teaching.htm
@@ -36,7 +36,8 @@
 		<table border=0 width="100%" cellspacing="10">
 		<tr>
 		<td width=63% valign="top"><h3><strong>Teaching</strong></h3>	
-		I have been the primary instructor for the undergraduate course <b>Political Science as a Social Science</b></p>
+		<p>Most recently, I have been a lecturer at UW's Center for Statistics and the Social Sciences, teaching the large undergraduate gateway course <i>Statistical Concepts And Methods For The Social Sciences.</i></p>
+		<p>I have been the primary instructor for the undergraduate course <i>Political Science as a Social Science</i></p>
 <p>I am also currently a consultant at the <a href="http:\\julius.csscr.washington.edu">Center for Social Science Computation and Research</a>, 
 where I develop and teach short training courses in software for research and statistical analysis (in particular <a href="http:\\www.r-project.org">R</a> 
 and <a href="http:\\atlasti.com">ATLAS.ti</a>).  Short courses I have developed include: 
