updated CV link & current job title

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
 
 		  <p><a href="index.htm">Home</a> - 
 		  <a href="research.htm">Research</a> - 
-		  <a href="CarolinaJohnson_CV.pdf">CV</a> - 
+		  <a href="Johnson_full_resumeJan2021.pdf">CV</a> - 
 		  <a href="teaching.htm">Teaching</a> - 
 		 <a href="contact.htm">Contact</a></p>
 		</div>
@@ -37,7 +37,7 @@
 		<table border=0 width="100%" cellspacing="10">
 		<tr>
 		<td width=63% valign="top"><h3>About me</h3>
-  		  <p>I currently am a data scientist with King County's Department of Community and Human Services.
+  		  <p>Currently, I am the Systems Impact Data Scientist with King County's Department of Community and Human Services Performance Measurement and Evaluation unit.  In this role I work to build out sustainable strategies for ongoing linkage of health and human services data across divisional silos while developing new client centered analysis that bring together cross-sector data to better understand the people we serve.
 			  
 			  Previously, I completed PhD candidate in Political Science at the University of Washington in Seattle, WA, 
 and a consultant at the <a href="http:\\julius.csscr.washington.edu">Center for Social Science Computation and Research</a></p>
