--- a/research.htm
+++ b/research.htm
@@ -61,7 +61,7 @@
       </ul>
       <p>&nbsp;</p>
 		<h3>Published work</h3>
-		  <p>"<a href="https://link.springer.com/article/10.1007%2Fs11109-021-09679-w">Testing the Participation Hypothesis: Evidence from Participatory Budgeting"</a>, with H. Jacob Carlson and Sonya Reynolds.  This is a preprint of an article published in Political Behavior. The final authenticated version is available online at: <a href="https://doi.org/10.1007%2Fs11109-021-09679-w">https://doi.org/10.1007%2Fs11109-021-09679-w</a>. The Replication code and instructions for accessing data available on <a href="https://github.com/csjohns/pb-voter-turnout">GitHub</a>.</p>
+		  <p>"<a href="https://link.springer.com/article/10.1007%2Fs11109-021-09679-w">Testing the Participation Hypothesis: Evidence from Participatory Budgeting"</a>, with H. Jacob Carlson and Sonya Reynolds.  This is a preprint of an article published in Political Behavior. The final authenticated version is available online at: <a href="https://doi.org/10.1007%2Fs11109-021-09679-w">https://doi.org/10.1007%2Fs11109-021-09679-w</a>. Replication code and instructions for accessing data available on <a href="https://github.com/csjohns/pb-voter-turnout">GitHub</a>.</p>
 		  <p>"<a href="http://www.publicdeliberation.net/jpd/vol11/iss1/art2/">Variations of Institutional Design for Empowered Deliberation"</a>, with John Gastil, in <i>Journal of Public Deliberation</i>, 2015.</p>
 		  <p>"<a href="http://onlinelibrary.wiley.com/doi/10.1111/1467-9248.12128/abstract">Civic Participation and Democratic Legitimacy</a>" in <i>Political Studies</i>, 2014. Data and code available <a href = "particip_legit_code.htm">here</a>.</p>
 		  <p>&nbsp; </p> 
