cleaned up formatting and links

--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,8 @@
 		  <a href="research.htm">Research</a> - 
 		  <a href="Johnson_full_resumeJan2021.pdf">CV</a> - 
 		  <a href="teaching.htm">Teaching</a> - 
+		  <a href="https://github.com/csjohns/">GitHub</a> - 
+		  <a href="https://www.linkedin.com/in/carolina-johnson-datascientist/">LinkedIn</a> - 
 		 <a href="contact.htm">Contact</a></p>
 		</div>
 
@@ -37,11 +39,10 @@
 		<table border=0 width="100%" cellspacing="10">
 		<tr>
 		<td width=63% valign="top"><h3>About me</h3>
-  		  <p>Currently, I am the Systems Impact Data Scientist with King County's Department of Community and Human Services Performance Measurement and Evaluation unit.  In this role I work to build out sustainable strategies for ongoing linkage of health and human services data across divisional silos while developing new client centered analysis that bring together cross-sector data to better understand the people we serve.
+  		  <p>Currently, I am the Systems Impact Data Scientist with <a href="https://www.kingcounty.gov/depts/community-human-services.aspx">King County's Department of Community and Human Services</a> Performance Measurement and Evaluation unit.  In this role I work to build out sustainable strategies for ongoing linkage of health and human services data across divisional silos while developing new client centered analysis that bring together cross-sector data to better understand the people we serve.</p>
 			  
-			  Previously, I completed PhD candidate in Political Science at the University of Washington in Seattle, WA, 
-and a consultant at the <a href="http:\\julius.csscr.washington.edu">Center for Social Science Computation and Research</a></p>
-<p>My dissertation combined quantitative and qualitative methods to evaluate community-level democratic outcomes from the implementation of participatory budgeting, a type of public process in which residents of a community are given control over how local public budgets are spent.  I work as a data and research consultant at the <a href = http://julius.csscr.washington.edu>Center for Social Science Computation and Research</a> specializing in R, STATA, and Atlas.ti and am an affiliate of the <a href=http://www.csss.washington.edu/index.shtml>Center for Statistics and the Social Sciences<a></p>
+			  <p>Previously, I completed PhD candidate in Political Science at the University of Washington in Seattle, WA, 
+and a consultant at the <a href="http:\\julius.csscr.washington.edu">Center for Social Science Computation and Research</a>.  My dissertation combined quantitative and qualitative methods to evaluate community-level democratic outcomes from the implementation of participatory budgeting, a type of public process in which residents of a community are given control over how local public budgets are spent.  I work as a data and research consultant at the <a href = http://julius.csscr.washington.edu>Center for Social Science Computation and Research</a> specializing in R, STATA, and Atlas.ti and am an affiliate of the <a href=http://www.csss.washington.edu/index.shtml>Center for Statistics and the Social Sciences<a></p>
 
 	       
       <p>Outside data science and research, I also work in Seattle as a theatrical lighting designer (recent collaborations include work with <a href = "https://www.reboottheatre.org/">Reboot Theatre Company</a>, <a href="http://annextheatre.org">Annex Theatre</a>, and <a href="https://www.cafenordo.com/">Cafe Nordo</a>) and escape the city to climb mountains when I can!</p>
