--- a/particip_legit_code.htm
+++ b/particip_legit_code.htm
@@ -22,10 +22,12 @@
 
 		  <p><a href="index.htm">Home</a> - 
 		  <a href="research.htm">Research</a> - 
+<a href="Johnson_full_resume_Jan2021.pdf">CV</a> - 
 		  <a href="teaching.htm">Teaching</a> - 
-		 <a href="contact.htm">Contact</a></p>      
+		  <a href="https://github.com/csjohns/">GitHub</a> - 
+		  <a href="https://www.linkedin.com/in/carolina-johnson-datascientist/">LinkedIn</a> - 
+		 <a href="contact.htm">Contact</a></p>
 		</div>
-
 	</td>
 
 	</tr>
